# flex-rhythm-sim

./: LICENSE  README.md  examples.py  get_lewins.py  indysim.py  requirements.txt  sample_score.xml  setup.cfg  simulate_flexible_melody.py
examples/: examples.py
src/indysim/: __init__.py  analysis.py  indysim.py  lewins.py  simulation.py
