[metadata]
name = indysim-dandersen19
version = 0.1.2
author = Drake Andersen
author_email = drake.ralph.andersen@gmail.com
description = Package for simulating and analyzing experimental music
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dandersen19/indysim
project_urls =
    Bug Tracker = https://github.com/dandersen19/indysim/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src